--- a/src/components/styling/sass/results.scss
+++ b/src/components/styling/sass/results.scss
@@ -33,6 +33,7 @@ nav {
 //Results styles
 .results-body {
     height: 100%;
+    overflow: visible;
     background: rgb(22,18,57);
     background: linear-gradient(180deg, rgba(22,18,57,1) 0%, rgba(86,108,167,1) 73%, rgba(89,115,184,1) 100%);    
     background-size: cover;
@@ -73,6 +74,7 @@ nav {
 }
 
 .photo {
+    align-self: center;
     img {
         width: 225px;
         max-width: 100%;
